--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         }
         .container{
             display: flex;
+            border: 2rem beige solid;
+            border-radius: 50%;
             width: 300px;
             height: 100px;
             gap: 20px;
@@ -26,6 +28,12 @@
         }
         button{
             font-size: 2rem;
+            background-color: beige;
+        }
+        button:hover{
+            font-size: 20rem;
+            background-color: black;
+            color: aliceblue;
         }
         .nr{
             border: 4px salmon solid;
